# msg

./: Cargo.toml  chat.html  flake.nix  test.sh
src/: lib.rs  message.rs  state.rs  user.rs
src/client/: main.rs
src/server/: main.rs  mod.rs
